--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,8 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        // backwards compatibility for drawables
+        vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
         release {
